--- a/public/css/style.css
+++ b/public/css/style.css
@@ -292,9 +292,9 @@ header .intro-text {
   margin: 30px 0;
 }
 
-/* Portfolio Section */
+/* Gallery Section */
 #portfolio {
-  padding: 60px 0;
+  padding: 100px 0;
 }
 .portfolio-item {
   margin: 1px -15px 0 -14px;
@@ -304,41 +304,28 @@ header .intro-text {
   margin-top: 50px;
   margin-bottom: 10px;
 }
-.image-row {
-  max-height: 500px;
-}
-
-.carousel-item img {
-  width: 1000px;
-  object-fit: cover;
-}
-
-.modal-lg {
-  max-width: 1000px;
-}
-#services,
-#portfolio {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 .gallery-video {
   width: 100%;
+}
+/* Image component */
+.carousel-item img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.modal-lg {
+  max-width: 90%;
 }
 
 /* Services Section */
 #services {
-  padding: 60px 0;
+  padding: 100px 0;
 }
 #services h4 {
   margin: 5px 0;
 }
 #services .service-img {
-  max-width: 240px;
-  width: 100%;
-  height: auto;
+  width: 240px;
 }
 #services .thumbnail {
   background: transparent;
